; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_svgawin.c_get_pixel.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_svgawin.c_get_pixel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_width = common dso_local global i32 0, align 4
@g_height = common dso_local global i32 0, align 4
@sdata = common dso_local global i32* null, align 8
@g_server_Bpp = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_pixel(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp sge i32 %6, 0
  br i1 %7, label %8, label %53

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @g_width, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %53

12:                                               ; preds = %8
  %13 = load i32, i32* %5, align 4
  %14 = icmp sge i32 %13, 0
  br i1 %14, label %15, label %53

15:                                               ; preds = %12
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @g_height, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %53

19:                                               ; preds = %15
  %20 = load i32*, i32** @sdata, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %49

22:                                               ; preds = %19
  %23 = load i32, i32* @g_server_Bpp, align 4
  %24 = icmp eq i32 %23, 1
  br i1 %24, label %25, label %35

25:                                               ; preds = %22
  %26 = load i32*, i32** @sdata, align 8
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* @g_width, align 4
  %29 = mul nsw i32 %27, %28
  %30 = load i32, i32* %4, align 4
  %31 = add nsw i32 %29, %30
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i32, i32* %26, i64 %32
  %34 = load i32, i32* %33, align 4
  store i32 %34, i32* %3, align 4
  br label %54

35:                                               ; preds = %22
  %36 = load i32, i32* @g_server_Bpp, align 4
  %37 = icmp eq i32 %36, 2
  br i1 %37, label %38, label %48

38:                                               ; preds = %35
  %39 = load i32*, i32** @sdata, align 8
  %40 = load i32, i32* %5, align 4
  %41 = load i32, i32* @g_width, align 4
  %42 = mul nsw i32 %40, %41
  %43 = load i32, i32* %4, align 4
  %44 = add nsw i32 %42, %43
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %39, i64 %45
  %47 = load i32, i32* %46, align 4
  store i32 %47, i32* %3, align 4
  br label %54

48:                                               ; preds = %35
  store i32 0, i32* %3, align 4
  br label %54

49:                                               ; preds = %19
  %50 = load i32, i32* %4, align 4
  %51 = load i32, i32* %5, align 4
  %52 = call i32 @vga_getpixel(i32 %50, i32 %51)
  store i32 %52, i32* %3, align 4
  br label %54

53:                                               ; preds = %15, %12, %8, %2
  store i32 0, i32* %3, align 4
  br label %54

54:                                               ; preds = %53, %49, %48, %38, %25
  %55 = load i32, i32* %3, align 4
  ret i32 %55
}

declare dso_local i32 @vga_getpixel(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
